Fix project card text alignment and add project card hover

--- a/Style/style.css
+++ b/Style/style.css
@@ -618,10 +618,18 @@ section[id] {
 
 .project-card {
   border-radius: 16px;
+  border: 1px solid var(--border);
   overflow: hidden;
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: var(--bg-section);
+  transition: box-shadow 0.3s ease-in-out,transform 0.3s ease-in-out;
+}
+.project-card:hover{
+  transform: translateY(-8px);
+  box-shadow: 0 16px 40px rgba(255, 87, 34, 0.12);
+  
 }
 
 .project-img-wrap {
@@ -733,7 +741,7 @@ section[id] {
 }
 
 .project-info {
-  padding: 16px 4px 8px;
+  padding: 16px 20px 8px;
   display: flex;
   flex-grow: 1;
   flex-direction: column;
@@ -741,18 +749,17 @@ section[id] {
 }
 
 .project-title {
-  font-size: clamp(0.95rem, calc(0.9rem + 0.3vw), 1.3rem);
+  font-size: clamp(0.87rem, calc(0.86rem + 0.2vw), 1.3rem);
   font-weight: 700;
   color: var(--text-heading);
   margin-bottom: 6px;
 }
 
 .project-desc {
-  font-size: clamp(0.85rem, calc(0.84rem + 0.25vw), 1.2rem);
+  font-size: clamp(0.8rem, calc(0.8rem + 0.25vw), 1rem);
   color: var(--text-muted);
   line-height: 1.7;
   display: flex;
-  text-align: justify;
   align-items: flex-end;
   margin: 0;
   flex: 1;
